--- a/css/styles.css
+++ b/css/styles.css
@@ -754,44 +754,6 @@ Skills
 ===============
 */
 
-/* .skills{
-  background:var(--clr-primary-9);
-  padding:0 1rem 3rem 1rem;
-}
-
-.skill{
-  position: relative;
-  margin-bottom: 1rem;
-}
-
-.skill p{
-  margin-bottom:0.5rem;
-}
-
-.skill-container{
-  display: grid;
-  grid-template-columns:1fr 1fr;
-  background:var(--clr-white);
-  height: 1rem;
-  border-radius: var(--radius);
-  overflow: hidden;
-}
-
-.skill-value{
-  background:var(--clr-primary-4);
-  height: 100%;
-  width: 100%;
-  border-radius:var(--radius);
-}
-
-.skill-text{
-  background:var(--clr-white);
-  position: absolute;
-  top: 0;
-  left:50%;
-  background:transparent;
-} */
-
 
 
 @media screen and (min-width:768px){
@@ -1033,6 +995,39 @@ Blog
 Footer
 ===============
 */
+
+.footer{
+  background:#222;
+  padding-bottom: 2rem;
+  display: grid;
+  place-items: center;
+  
+}
+
+.footer .social-icon{
+ color: var(--clr-primary-5);
+}
+.footer .social-icon:hover{
+ color: var(--clr-primary-10);
+}
+
+.footer .social-icons{
+  margin-bottom: 2rem;
+}
+
+.footer p{
+  text-transform: capitalize;
+  font-size:1.25rem;
+}
+
+
+
+
+
+
+
+
+
 /*
 =============== 
 Single Page
